fixed encoding in pdf and removed trailing newlines on input in checkit